build_stderr.txt
x86_64-elf-gcc.exe : kernel\ar
ch\x86_64\syscall.c:1188:16: 
error: redefinition of 
'sys_faccessat'
En P:\EterOS\build.ps1: 393 
CarĀcter: 9
+         & $CC @CFLAGS -c 
$src -o $obj 2>&1
+         ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~
    + CategoryInfo          : 
    NotSpecified: (kernel\ar  
  ch\x86...'sys_faccessat':   
 String) [], RemoteExcepti    
on
    + FullyQualifiedErrorId : 
    NativeCommandError
 
 1188 | static int64_t 
sys_faccessat(int dirfd, 
const char* path, int mode, 
int flags) {
      |                
^~~~~~~~~~~~~
kernel\arch\x86_64\syscall.c:1
149:16: note: previous 
definition of 'sys_faccessat' 
with type 'int64_t(int,  
const char *, int,  int)' 
{aka 'long long int(int,  
const char *, int,  int)'}
 1149 | static int64_t 
sys_faccessat(int dirfd, 
const char* path, int mode, 
int flags) {
      |                
^~~~~~~~~~~~~
kernel\arch\x86_64\syscall.c: 
In function 'sys_faccessat':
kernel\arch\x86_64\syscall.c:1
191:15: error: implicit 
declaration of function 
'copy_user_string' [-Wimplicit
-function-declaration]
 1191 |     int res = 
copy_user_string(path, 
&kpath, 4096);
      |               
^~~~~~~~~~~~~~~~
kernel\arch\x86_64\syscall.c: 
At top level:
kernel\arch\x86_64\syscall.c:1
149:16: warning: 
'sys_faccessat' defined but 
not used [-Wunused-function]
 1149 | static int64_t 
sys_faccessat(int dirfd, 
const char* path, int mode, 
int flags) {
      |                
^~~~~~~~~~~~~
kernel\arch\x86_64\syscall.c:6
45:16: warning: 
'sys_readlink' defined but 
not used [-Wunused-function]
  645 | static int64_t 
sys_readlink(const char* 
path, char* buf, size_t 
bufsiz) {
      |                
^~~~~~~~~~~~
